funcionalidad para subir imagenes a storage

--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <title>Fasteps</title>
   </head>
   <body>
+    <!-- Se crea la instancia para la app de vue -->
     <div id="app">
-      
+      <!-- contenido de la app -->
     </div>
     <script type="module" src="/src/main.js"></script>
   </body>
